--- a/view/frontend/layout/catalog_product_view_type_downloadable.xml
+++ b/view/frontend/layout/catalog_product_view_type_downloadable.xml
@@ -1,10 +1,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <css src="Bleez_Correios::/css/correios.css" />
-    </head>
     <body>
         <referenceContainer name="product.info.extrahint">
-            <block class="Bleez\Correios\Block\Catalog\Product\View\CalcularFrete" name="bleez_correios_frete" after="product.info.social" template="catalog/product/view/frete.phtml"></block>
+            <referenceBlock name="bleez_correios_frete" remove="true"></referenceBlock>
         </referenceContainer>
     </body>
 </page>
