--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -23,6 +23,7 @@
                                                             <item name="children" xsi:type="array">
                                                                 <item name="postcode" xsi:type="array">
                                                                     <item name="component" xsi:type="string">Bleez_Correios/js/form/element/post-code</item>
+                                                                    <item name="sortOrder" xsi:type="string">60</item>
                                                                     <item name="config" xsi:type="array">
                                                                         <item name="elementTmpl" xsi:type="string">Bleez_Correios/form/element/post-code</item>
                                                                     </item>
