--- a/view/frontend/templates/catalog/product/view/frete.phtml
+++ b/view/frontend/templates/catalog/product/view/frete.phtml
@@ -5,25 +5,27 @@
  * @var $this \Bleez\Correios\Block\Catalog\Product\View\CalcularFrete
  */
 ?>
-<form id="simularFrete" action="<?php echo $this->getUrl('rest/V1/estimarFrete'); ?>">
-    <h2 class="simulateTitle">
-        <!--
-            <i class="fa fa-truck"></i>
-         --> Calcule seu frete
-    </h2>
-    <div class="simularFrete_cont">
-        <input type="text" class="input-text simularFrete_submit_inputText" id="cep" required="required" pattern="\d{5}-{0,1}\d{3}" title="Cep invalido">
-        <input type="submit" value="Calcular Frete" class="action primary simularFrete_submit" id="sendFrete"  />
-    </div>
+<?php if($this->canShow()){ ?>
+    <form id="simularFrete" action="<?php echo $this->getUrl('rest/V1/estimarFrete'); ?>">
+        <h2 class="simulateTitle">
+            <!--
+                <i class="fa fa-truck"></i>
+             --> Calcule seu frete
+        </h2>
+        <div class="simularFrete_cont">
+            <input type="text" class="input-text simularFrete_submit_inputText" id="cep" required="required" pattern="\d{5}-{0,1}\d{3}" title="Cep invalido">
+            <input type="submit" value="Calcular Frete" class="action primary simularFrete_submit" id="sendFrete"  />
+        </div>
 
-    <ul id="containerFrete" style="display: none" class="simularFrete_itens">
-    </ul>
-</form>
+        <ul id="containerFrete" style="display: none" class="simularFrete_itens">
+        </ul>
+    </form>
 
-<script type="text/x-magento-init">
-    {
-        "*": {
-            "Bleez_Correios/js/simularFrete": []
+    <script type="text/x-magento-init">
+        {
+            "*": {
+                "Bleez_Correios/js/simularFrete": []
+            }
         }
-    }
-</script>
+    </script>
+<?php } ?>
