Adicionado ext-soap composer

--- a/view/adminhtml/templates/catalog/product/correiosLimit.phtml
+++ b/view/adminhtml/templates/catalog/product/correiosLimit.phtml
@@ -2,6 +2,7 @@
 /**
  * Limites dos correios
  *
+ * Deixou de funcionar no magento 2.1
  * @var $this \Bleez\Correios\Block\Adminhtml\Catalog\Product\Edit\CorreiosLimit
  */
 ?>
